added the uploadcontent component

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 
 .custom-sidebar {
   width: 80px;
-  background-color: #d97b7b;
+  background-color: #000000;
   height: calc(100vh - 64px); 
   overflow-y: auto;
   padding: 5px;
@@ -30,7 +30,7 @@
 .content-container {
   width: 340px;
   height: calc(100vh - 64px); 
-  background-color: #69c637ab;
+  background-color: #258b8bbd;
   overflow: auto; 
   padding: 16px;
   box-sizing: border-box;
