--- a/src/components/EditPlayground.css
+++ b/src/components/EditPlayground.css
@@ -1,4 +1,4 @@
-/* EditPlayground.css */
+EditPlayground.css
 .edit-playground {
   display: flex;
   flex-direction: column;
@@ -42,4 +42,35 @@
   background-color: #ffffff;
   border-radius: 6px;
   box-sizing: border-box;
+}
+
+.edit-playground {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.edit-appbar {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+  background-color: #f5f5f5;
+}
+
+.icon-button {
+  color: #000;
+}
+
+.editing-area {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+}
+
+.editor {
+  width: 100%;
+  height: 100%;
+  max-height: 500px; 
 }
