Added the publish button to save the selected image from the device or photos

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,13 +1,14 @@
 /* Header.css */
 
 .header-appbar {
-    background-color: #459599; /* Header background color */
+    background-color: #529396; /* Header background color */
   }
   
   .header-toolbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: rgba(43, 144, 142, 0.792);
   }
   
   .header-title {
